--- a/location.html
+++ b/location.html
@@ -13,7 +13,8 @@
         <hr>
 
         <div class="row">
-            <h2 class="col-10">Active Coins</h2>
+            <h2 class="col-8">Active Coins</h2>
+            <button type="button" class="col-2 btn btn-primary" onclick="bossTime()">Boss Time</button>
             <button type="button" class="col-2 btn btn-primary" data-toggle="modal" data-target="#faucetModal">Add Faucet</button>
         </div>
         <ul id="spawn-list" class="spawn-list">
@@ -59,7 +60,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="./location.js"></script>
