--- a/location.html
+++ b/location.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>The Lab Miami Location Dashboard</h1>
+        <h1>CryptoQuest Dashboard - The LAB Miami</h1>
         <hr>
 
-        <div class="row">
-            <h2 class="col-8">Active Coins</h2>
-            <button type="button" class="col-2 btn btn-primary" onclick="bossTime()">Boss Time</button>
-            <button type="button" class="col-2 btn btn-primary" data-toggle="modal" data-target="#faucetModal">Add Faucet</button>
+        <div class="row coin-buttons">
+            <h2 class="col-7">Active Coins</h2>
+            <button type="button" class="col-2 btn btn-danger" onclick="bossTime()">Attack</button>
+            <button type="button" class="col-2 btn btn-success" data-toggle="modal" data-target="#faucetModal">Add Faucet</button>
         </div>
         <ul id="spawn-list" class="spawn-list">
         </ul>
